clear cache git

--- a/app/views/layouts/default.twig
+++ b/app/views/layouts/default.twig
@@ -17,6 +17,8 @@
     <link rel="stylesheet" type="text/css" href="assets/components/header.css">
     <link rel="stylesheet" type="text/css" href="assets/components/image.css">
     <link rel="stylesheet" type="text/css" href="assets/components/menu.css">
+    <link rel="stylesheet" type="text/css" href="assets/components/message.css">
+    <link rel="stylesheet" type="text/css" href="assets/components/custom.css">
 
     <link rel="stylesheet" type="text/css" href="assets/components/divider.css">
     <link rel="stylesheet" type="text/css" href="assets/components/dropdown.css">
